--- a/less3/css/style.css
+++ b/less3/css/style.css
@@ -52,4 +52,25 @@ body {
 .btn__header-green {
     background: var(--green);
 }
+.heading {
+    font-weight: 800;
+    font-size: 36px;
+    line-height: 44px;
+    margin-top: 60px;
+    margin-bottom: 14px;
+}
 
+@media screen and (max-width: 992px) {
+    .input-header {
+        width: calc(100% - 50px);
+    }
+}
+@media screen and (max-width: 768px) {
+    .input {
+        order: 1;
+        margin-top: 20px;
+    }
+    .input-header {
+        width: 100%;
+    }
+}
