--- a/less3/css/style.css
+++ b/less3/css/style.css
@@ -1,7 +1,13 @@
 :root {
     --white: rgb(255, 255, 255);
+    --grey-background: rgb(236, 236, 236);
+    --grey-button: rgb(196, 196, 196);
+    --grey-link: rgb(123, 123, 123);
+    --grey-link-active: rgb(52, 52, 52);
+    --grey-text: rgb(161, 161, 161);
     --orange: rgb(239, 120, 26);
     --green: rgb(0, 208, 8);
+    --green-heart: rgb(105, 160, 66);
     --black: rgb(0, 0, 0);
 }
 body {
@@ -52,12 +58,74 @@ body {
 .btn__header-green {
     background: var(--green);
 }
+.main-background {
+    background: var(--grey-background);
+}
 .heading {
     font-weight: 800;
     font-size: 36px;
     line-height: 44px;
     margin-top: 60px;
     margin-bottom: 14px;
+}
+.nav-item:not(:last-child) {
+    margin-right: 33px;
+}
+.nav-link {
+    padding: 0;
+    color: var(--grey-link);
+}
+.nav-link:hover {
+    color: var(--grey-link-active);
+}
+.nav-link.active-link {
+    background-color: var(--grey-button);
+    color: var(--grey-link-active);
+    border-radius: 10px;
+    padding: 8px 6px;
+}
+.nav-link.active-link:hover {
+    opacity: 0.75;
+}
+.subsection {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 29px;
+    padding: 0;
+    margin-bottom: 35px;
+}
+.card-active {
+    cursor: pointer;
+}
+.card-active:hover .add-cart {
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    color: var(--white);
+    background: var(--orange);
+    padding: 10px 23px;
+    border-radius: 10px;
+}
+.card-body {
+    padding: 13px 27px;
+}
+.card-height {
+    min-height: 287px;
+}
+.card-text {
+    font-size: 10px;
+    line-height: 12px;
+    color: var(--grey-text);
+}
+.shadow-card {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.add-cart {
+    color: var(--black);
+    text-decoration: none;
+}
+.heart:hover svg{
+    fill: var(--green-heart);
 }
 
 @media screen and (max-width: 992px) {
