--- a/less3/css/style.css
+++ b/less3/css/style.css
@@ -130,7 +130,7 @@ body {
     display: flex;
     color: var(--black);
     text-decoration: none;
-    padding: 6.5px 23px;
+    padding: 6.5px 0;
 }
 .add-cart {
     display: none;
@@ -160,6 +160,7 @@ body {
 .text-table {
     font-size: 14px;
     line-height: 17px;
+    max-width: 130px;
 }
 .list-text {
     font-size: 12px;
@@ -219,6 +220,13 @@ body {
     padding: 14px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
+}
+.modal-btn-like:hover span {
+    color: var(--black);
+}
+.img-modal {
+    max-width: 286px;
+    height: auto;
 }
 .counter {
     font-weight: 600;
