--- a/less4/my-app/src/components/main/style.css
+++ b/less4/my-app/src/components/main/style.css
@@ -27,3 +27,22 @@
 .card-list__img{
     width: 100%;
 }
+.card-list__line {
+    display: flex;
+    background: #F7654A;
+    width: 55px;
+    height: 6px;
+    margin-top: 45px;
+}
+.card-list__name {
+    font-size: 24px;
+    line-height: 36px;
+    color: #404149;
+}
+.card-list__text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #999999;
+    margin: 20px 0;
+}
